--- a/package.json
+++ b/package.json
@@ -9,11 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.5",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
+    "antd": "^5.1.6",
+    "axios": "^1.2.4",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "js-cookie": "^3.0.1",
+    "mdb-ui-kit": "^6.1.0",
     "next": "13.1.5",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-image-file-resizer": "^0.4.8",
+    "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "reselect": "^4.1.7"
   }
 }
