--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     environment: ecom  
     env:
-     NEXT_PUBLIC_STRIPE_KEY: ${{secrets.PASSWORD2}}
+     NEXT_PUBLIC_STRIPE_KEY: ${{secrets.STRIPE_KEY}}
     runs-on: ubuntu-latest
     steps:
       - name: action
